# Exchain

./: CMakeLists.txt  LICENSE  README.md  flatmatrix.h  flatmatrix.tpp  main.cpp  mchain.cpp  mchain.h  randgen.cpp  tests.cpp  trmatrix.h  trmatrix.tpp
cmake/: AddSourcesToTarget.cmake
include/: CMakeLists.txt
include/mchain/: CMakeLists.txt  mchain.h  randgen.h  trmatrix.h  trmatrix.tpp
include/utilities/: CMakeLists.txt  files.h
src/: CMakeLists.txt  main.cpp
src/mchain/: CMakeLists.txt  mchain.cpp  randgen.cpp  tests.cpp
src/utilities/: CMakeLists.txt  files.cpp
